# linxer

./: .dockerignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.py  makefile
include/linxer/: Accessor.h  IAccessor.h  StringRingBuffer.h  linxer.h
src/: Accessor.cpp  StringRingBuffer.cpp  linxer.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
